parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BREAK
    CHAR_LITERAL
    COMMENT_MULTI
    COMMENT_SINGLE
    CONTINUE
    DEC
    EQ
    FLOAT_LITERAL
    GT
    GTE
    INC
    LBRACKET
    LT
    LTE
    MOD
    NEQ
    NOT
    OR
    RBRACKET
    STRING_LITERAL

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> function_declaration
Rule 6     var_declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 7     var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> FLOAT
Rule 10    type_specifier -> CHAR
Rule 11    type_specifier -> VOID
Rule 12    function_declaration -> type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
Rule 13    param_list -> param_list COMMA param
Rule 14    param_list -> param
Rule 15    param_list -> empty
Rule 16    param -> type_specifier IDENTIFIER
Rule 17    empty -> <empty>
Rule 18    compound_statement -> LBRACE statement_list RBRACE
Rule 19    statement_list -> statement_list statement
Rule 20    statement_list -> statement
Rule 21    statement -> expression_statement
Rule 22    statement -> compound_statement
Rule 23    statement -> selection_statement
Rule 24    statement -> iteration_statement
Rule 25    statement -> return_statement
Rule 26    expression_statement -> expression SEMICOLON
Rule 27    expression -> assignment_expression
Rule 28    expression -> binary_expression
Rule 29    expression -> term
Rule 30    assignment_expression -> IDENTIFIER ASSIGN expression
Rule 31    binary_expression -> expression PLUS expression
Rule 32    binary_expression -> expression MINUS expression
Rule 33    binary_expression -> expression TIMES expression
Rule 34    binary_expression -> expression DIVIDE expression
Rule 35    term -> IDENTIFIER
Rule 36    term -> INT_LITERAL
Rule 37    term -> LPAREN expression RPAREN
Rule 38    selection_statement -> IF LPAREN expression RPAREN statement
Rule 39    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 40    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 41    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 42    return_statement -> RETURN expression SEMICOLON

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 7 30
BREAK                : 
CHAR                 : 10
CHAR_LITERAL         : 
COMMA                : 13
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
CONTINUE             : 
DEC                  : 
DIVIDE               : 34
ELSE                 : 39
EQ                   : 
FLOAT                : 9
FLOAT_LITERAL        : 
FOR                  : 41
GT                   : 
GTE                  : 
IDENTIFIER           : 6 7 12 16 30 35
IF                   : 38 39
INC                  : 
INT                  : 8
INT_LITERAL          : 36
LBRACE               : 18
LBRACKET             : 
LPAREN               : 12 37 38 39 40 41
LT                   : 
LTE                  : 
MINUS                : 32
MOD                  : 
NEQ                  : 
NOT                  : 
OR                   : 
PLUS                 : 31
RBRACE               : 18
RBRACKET             : 
RETURN               : 42
RPAREN               : 12 37 38 39 40 41
SEMICOLON            : 6 7 26 42
STRING_LITERAL       : 
TIMES                : 33
VOID                 : 11
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

assignment_expression : 27
binary_expression    : 28
compound_statement   : 12 22
declaration          : 2 3
declaration_list     : 1 2
empty                : 15
expression           : 7 26 30 31 31 32 32 33 33 34 34 37 38 39 40 41 42
expression_statement : 21 41 41
function_declaration : 5
iteration_statement  : 24
param                : 13 14
param_list           : 12 13
program              : 0
return_statement     : 25
selection_statement  : 23
statement            : 19 20 38 39 39 40 41
statement_list       : 18 19
term                 : 29
type_specifier       : 6 7 12 16
var_declaration      : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) var_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (7) var_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (12) function_declaration -> . type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    VOID            shift and go to state 10

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) var_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (7) var_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (12) function_declaration -> . type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    VOID            shift and go to state 10

    declaration                    shift and go to state 11
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> function_declaration .

    INT             reduce using rule 5 (declaration -> function_declaration .)
    FLOAT           reduce using rule 5 (declaration -> function_declaration .)
    CHAR            reduce using rule 5 (declaration -> function_declaration .)
    VOID            reduce using rule 5 (declaration -> function_declaration .)
    $end            reduce using rule 5 (declaration -> function_declaration .)


state 6

    (6) var_declaration -> type_specifier . IDENTIFIER SEMICOLON
    (7) var_declaration -> type_specifier . IDENTIFIER ASSIGN expression SEMICOLON
    (12) function_declaration -> type_specifier . IDENTIFIER LPAREN param_list RPAREN compound_statement

    IDENTIFIER      shift and go to state 12


state 7

    (8) type_specifier -> INT .

    IDENTIFIER      reduce using rule 8 (type_specifier -> INT .)


state 8

    (9) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 9 (type_specifier -> FLOAT .)


state 9

    (10) type_specifier -> CHAR .

    IDENTIFIER      reduce using rule 10 (type_specifier -> CHAR .)


state 10

    (11) type_specifier -> VOID .

    IDENTIFIER      reduce using rule 11 (type_specifier -> VOID .)


state 11

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 12

    (6) var_declaration -> type_specifier IDENTIFIER . SEMICOLON
    (7) var_declaration -> type_specifier IDENTIFIER . ASSIGN expression SEMICOLON
    (12) function_declaration -> type_specifier IDENTIFIER . LPAREN param_list RPAREN compound_statement

    SEMICOLON       shift and go to state 13
    ASSIGN          shift and go to state 14
    LPAREN          shift and go to state 15


state 13

    (6) var_declaration -> type_specifier IDENTIFIER SEMICOLON .

    INT             reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CHAR            reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)


state 14

    (7) var_declaration -> type_specifier IDENTIFIER ASSIGN . expression SEMICOLON
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 17
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 15

    (12) function_declaration -> type_specifier IDENTIFIER LPAREN . param_list RPAREN compound_statement
    (13) param_list -> . param_list COMMA param
    (14) param_list -> . param
    (15) param_list -> . empty
    (16) param -> . type_specifier IDENTIFIER
    (17) empty -> .
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    RPAREN          reduce using rule 17 (empty -> .)
    COMMA           reduce using rule 17 (empty -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    VOID            shift and go to state 10

    type_specifier                 shift and go to state 23
    param_list                     shift and go to state 24
    param                          shift and go to state 25
    empty                          shift and go to state 26

state 16

    (30) assignment_expression -> IDENTIFIER . ASSIGN expression
    (35) term -> IDENTIFIER .

    ASSIGN          shift and go to state 27
    SEMICOLON       reduce using rule 35 (term -> IDENTIFIER .)
    PLUS            reduce using rule 35 (term -> IDENTIFIER .)
    MINUS           reduce using rule 35 (term -> IDENTIFIER .)
    TIMES           reduce using rule 35 (term -> IDENTIFIER .)
    DIVIDE          reduce using rule 35 (term -> IDENTIFIER .)
    RPAREN          reduce using rule 35 (term -> IDENTIFIER .)


state 17

    (7) var_declaration -> type_specifier IDENTIFIER ASSIGN expression . SEMICOLON
    (31) binary_expression -> expression . PLUS expression
    (32) binary_expression -> expression . MINUS expression
    (33) binary_expression -> expression . TIMES expression
    (34) binary_expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 28
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 18

    (27) expression -> assignment_expression .

    SEMICOLON       reduce using rule 27 (expression -> assignment_expression .)
    PLUS            reduce using rule 27 (expression -> assignment_expression .)
    MINUS           reduce using rule 27 (expression -> assignment_expression .)
    TIMES           reduce using rule 27 (expression -> assignment_expression .)
    DIVIDE          reduce using rule 27 (expression -> assignment_expression .)
    RPAREN          reduce using rule 27 (expression -> assignment_expression .)


state 19

    (28) expression -> binary_expression .

    SEMICOLON       reduce using rule 28 (expression -> binary_expression .)
    PLUS            reduce using rule 28 (expression -> binary_expression .)
    MINUS           reduce using rule 28 (expression -> binary_expression .)
    TIMES           reduce using rule 28 (expression -> binary_expression .)
    DIVIDE          reduce using rule 28 (expression -> binary_expression .)
    RPAREN          reduce using rule 28 (expression -> binary_expression .)


state 20

    (29) expression -> term .

    SEMICOLON       reduce using rule 29 (expression -> term .)
    PLUS            reduce using rule 29 (expression -> term .)
    MINUS           reduce using rule 29 (expression -> term .)
    TIMES           reduce using rule 29 (expression -> term .)
    DIVIDE          reduce using rule 29 (expression -> term .)
    RPAREN          reduce using rule 29 (expression -> term .)


state 21

    (36) term -> INT_LITERAL .

    SEMICOLON       reduce using rule 36 (term -> INT_LITERAL .)
    PLUS            reduce using rule 36 (term -> INT_LITERAL .)
    MINUS           reduce using rule 36 (term -> INT_LITERAL .)
    TIMES           reduce using rule 36 (term -> INT_LITERAL .)
    DIVIDE          reduce using rule 36 (term -> INT_LITERAL .)
    RPAREN          reduce using rule 36 (term -> INT_LITERAL .)


state 22

    (37) term -> LPAREN . expression RPAREN
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 33
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 23

    (16) param -> type_specifier . IDENTIFIER

    IDENTIFIER      shift and go to state 34


state 24

    (12) function_declaration -> type_specifier IDENTIFIER LPAREN param_list . RPAREN compound_statement
    (13) param_list -> param_list . COMMA param

    RPAREN          shift and go to state 35
    COMMA           shift and go to state 36


state 25

    (14) param_list -> param .

    RPAREN          reduce using rule 14 (param_list -> param .)
    COMMA           reduce using rule 14 (param_list -> param .)


state 26

    (15) param_list -> empty .

    RPAREN          reduce using rule 15 (param_list -> empty .)
    COMMA           reduce using rule 15 (param_list -> empty .)


state 27

    (30) assignment_expression -> IDENTIFIER ASSIGN . expression
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 37
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 28

    (7) var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .

    INT             reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    FLOAT           reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    CHAR            reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    $end            reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)


state 29

    (31) binary_expression -> expression PLUS . expression
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 38
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 30

    (32) binary_expression -> expression MINUS . expression
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 39
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 31

    (33) binary_expression -> expression TIMES . expression
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 40
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 32

    (34) binary_expression -> expression DIVIDE . expression
    (27) expression -> . assignment_expression
    (28) expression -> . binary_expression
    (29) expression -> . term
    (30) assignment_expression -> . IDENTIFIER ASSIGN expression
    (31) binary_expression -> . expression PLUS expression
    (32) binary_expression -> . expression MINUS expression
    (33) binary_expression -> . expression TIMES expression
    (34) binary_expression -> . expression DIVIDE expression
    (35) term -> . IDENTIFIER
    (36) term -> . INT_LITERAL
    (37) term -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 16
    INT_LITERAL     shift and go to state 21
    LPAREN          shift and go to state 22

    expression                     shift and go to state 41
    assignment_expression          shift and go to state 18
    binary_expression              shift and go to state 19
    term                           shift and go to state 20

state 33

    (37) term -> LPAREN expression . RPAREN
    (31) binary_expression -> expression . PLUS expression
    (32) binary_expression -> expression . MINUS expression
    (33) binary_expression -> expression . TIMES expression
    (34) binary_expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32


state 34

    (16) param -> type_specifier IDENTIFIER .

    RPAREN          reduce using rule 16 (param -> type_specifier IDENTIFIER .)
    COMMA           reduce using rule 16 (param -> type_specifier IDENTIFIER .)


state 35

    (12) function_declaration -> type_specifier IDENTIFIER LPAREN param_list RPAREN . compound_statement
    (18) compound_statement -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 44

    compound_statement             shift and go to state 43

state 36

    (13) param_list -> param_list COMMA . param
    (16) param -> . type_specifier IDENTIFIER
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    VOID            shift and go to state 10

    param                          shift and go to state 45
    type_specifier                 shift and go to state 23

state 37

    (30) assignment_expression -> IDENTIFIER ASSIGN expression .
    (31) binary_expression -> expression . PLUS expression
    (32) binary_expression -> expression . MINUS expression
    (33) binary_expression -> expression . TIMES expression
    (34) binary_expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMICOLON       reduce using rule 30 (assignment_expression -> IDENTIFIER ASSIGN expression .)
    RPAREN          reduce using rule 30 (assignment_expression -> IDENTIFIER ASSIGN expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32

  ! PLUS            [ reduce using rule 30 (assignment_expression -> IDENTIFIER ASSIGN expression .) ]
  ! MINUS           [ reduce using rule 30 (assignment_expression -> IDENTIFIER ASSIGN expression .) ]
  ! TIMES           [ reduce using rule 30 (assignment_expression -> IDENTIFIER ASSIGN expression .) ]
  ! DIVIDE          [ reduce using rule 30 (assignment_expression -> IDENTIFIER ASSIGN expression .) ]


state 38

    (31) binary_expression -> expression PLUS expression .
    (31) binary_expression -> expression . PLUS expression
    (32) binary_expression -> expression . MINUS expression
    (33) binary_expression -> expression . TIMES expression
    (34) binary_expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMICOLON       reduce using rule 31 (binary_expression -> expression PLUS expression .)
    RPAREN          reduce using rule 31 (binary_expression -> expression PLUS expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32

  ! PLUS            [ reduce using rule 31 (binary_expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 31 (binary_expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 31 (binary_expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 31 (binary_expression -> expression PLUS expression .) ]


state 39
